<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scrollView3" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:id="@+id/tableLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:isScrollContainer="true">
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Title" android:textSize="25sp"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
        	<TextView android:id="@+id/titlebox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp" />
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
        	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Author" android:textSize="25sp"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
        	<TextView android:id="@+id/authorbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content" android:layout_height="wrap_content">
        	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/URL" android:textSize="25sp"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow6" android:layout_width="wrap_content" android:layout_height="wrap_content">
        	<TextView android:id="@+id/urlbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp" android:autoLink="web"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow7" android:layout_width="wrap_content" android:layout_height="wrap_content">
        	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/PDF" android:textSize="25sp"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow8" android:layout_width="wrap_content" android:layout_height="wrap_content">
        	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp" android:id="@+id/pdfbox" android:autoLink="web"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow9" android:layout_width="wrap_content" android:layout_height="wrap_content">
        	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Cite" android:textSize="25sp"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow10" android:layout_width="wrap_content" android:layout_height="wrap_content">
        	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp" android:id="@+id/citebox"/>
        </TableRow>
    </TableLayout>
</ScrollView>
